# paper-as-code

./: .gitignore  AGENTS.md  README.md  config.yaml.example  pyproject.toml
docs/: architecture.md
src/: AGENTS.md
src/pac/: __init__.py  __main__.py  cli.py  config.py  dashboard.py  indexer.py  models.py  paths.py  pdf.py  services.py  storage.py  utils.py  workspace.py
src/pac/assets/: __init__.py
src/pac/assets/workspace_template/: AGENTS.md  README.md  pac-workspace.yaml
src/pac/assets/workspace_template/codex/profiles/: default.md
src/pac/assets/workspace_template/sources/: AGENTS.md
src/pac/assets/workspace_template/templates/: AGENTS.md  report.md
src/pac/assets/workspace_template/vault/: AGENTS.md
src/pac/assets/workspace_template/vault/Inbox/: AGENTS.md
src/pac/assets/workspace_template/vault/Notes/: AGENTS.md
src/pac/assets/workspace_template/vault/Reports/: AGENTS.md
tests/: AGENTS.md  conftest.py  test_cli.py
