[project]
name = "pac"
version = "0.1.0"
description = "Agent-first Paper as Code toolkit for research objects."
license = "MIT"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7",
  "pypdf>=4.2",
  "pyyaml>=6.0",
]

[project.scripts]
pac = "pac.cli:main"

[dependency-groups]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.5",
  "types-PyYAML>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pac"]
force-include = { "src/pac/assets" = "pac/assets" }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "ARG"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["pac"]
